[package]
name = "voiceland"
version = "1.0.0"
edition = "2024"
description = "A voice communication binary for local area networks."

[dependencies]
# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Audio
cpal = "0.17.3"
nnnoiseless = "0.5.2"

# TUI
ratatui = { version = "0.30" }
crossterm = { version = "0.29" }

# Audio codec
opus-rs = "0.1"

# Utilities
bytes = "1.6"

# Configuration
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
